# kounafoni-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.chatbot_app  Dockerfile.flask_app  LICENSE  README.md  chainlit.md  docker-compose.yml  launch_chatbot_app_server.sh  launch_flask_app_server.sh  pull_ollama_models_and_launch_app_servers.sh  pyproject.toml  service.yaml  test_notebook.ipynb
.chainlit/: config.toml
.github/workflows/: actions.yml  ci_pipeline.yml  jt_tv_audio_processing.yml  update_news_for_malijet.yml  update_vectorstore.yml
Notebook/: local_rag.ipynb  news_summary_audio.ipynb  scrap_example.ipynb
data/malijet/: source.csv
data/vector_stores/chroma_db_1024/2dc6b1af-d7c1-49b5-ac34-d98e7fc4e310/: index_metadata.pickle
src/: chatbot.py  chroma_db_updater.py  malijet_news_updater.py  models.py  ortm_jt_audio_updater.py  rag.py  scraper.py  speech_to_text.py  summarizer.py  text_to_speech.py  utils.py
src/app/: app.py
src/app/static/css/: modified_solid_style.css  news_style.css  solid_style.css  style.css  style3.css
src/app/static/js/: audio_control.js  script.js
src/app/templates/: audio_player_template.html  chat.html  footer.html  index.html  news.html  news2.html  test.html  test2.html
