[tool.poetry]
name = "kounafoni-app"
version = "0.1.0"
description = "The idea is to provide a web interface to enable easy access to Malian news on a daily basis. It highlights the work of the local press and official media through high-quality summary reports"
authors = ["lonytech <contact@lonytech.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.0"
dateparser = "^1.2.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
beautifulsoup4 = "^4.12.3"
black = "^24.4.2"
isort = "^5.13.2"
pytube = "^15.0.0"
moviepy = "^1.0.3"
openai-whisper = "^20231117"
chromadb = "^0.5.0"
langchain-community = "^0.2.0"
jupyter = "^1.0.0"


[tool.poetry.group.explo]
optional = true

[tool.poetry.group.explo.dependencies]
langchain-openai = "^0.1.7"
docarray = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
