[tool.poetry]
name = "kounafoni-app"
version = "0.1.0"
description = "The idea is to provide a web interface to enable easy access to Malian news on a daily basis. It highlights the work of the local press and official media through high-quality summary reports"
authors = ["lonytech <contact@lonytech.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.0"
dateparser = "^1.2.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
black = "^24.4.2"
isort = "^5.13.2"
chromadb = "^0.5.0"
langchain-community = "^0.2.0"
langchain-groq = "^0.1.6"

# Install app_gui dependencies to render landing page GUI
[tool.poetry.group.app_gui]
optional = true

[tool.poetry.group.app_gui.dependencies]
flask = "^3.0.3"
gunicorn = "^22.0.0"

# Install news_processing dependencies for voice summary pipeline processing and
[tool.poetry.group.news_processing]
optional = true

[tool.poetry.group.news_processing.dependencies]
moviepy = "^1.0.3"
pydub = "^0.25.1"
openai-whisper = "^20231117"
beautifulsoup4 = "^4.12.3"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
pytubefix = "7.1rc1"

# Install rag dendencies only for chainlit chatbot
[tool.poetry.group.rag]
optional = true

[tool.poetry.group.rag.dependencies]
chainlit = "1.1.202"

# Install explo dependencies for notebook exploration
# (add "news_processing" or "rag" dependencies depnding on your needs)
[tool.poetry.group.explo]
optional = true

[tool.poetry.group.explo.dependencies]
jupyter = "^1.0.0"
langchain-openai = "^0.1.7"
docarray = "^0.40.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
